edit on website

--- a/Website.html
+++ b/Website.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+<style>
+body {background-color: powderblue;}
+h1 {font-family: verdana;}
+p {
+    font-family: verdana;
+    border : 2px solid dodgerblue;
+    }
+div {
+    text-align: justify;
+}
+</style>
 <head>
 <title>About Me</title>
 </head>
@@ -7,6 +18,8 @@
 <center>
 <h1>Fortofolio Diri</h1>
 <img src = "Picture.jpg" alt="Foto Diri" width="200" height="293">
+<div>
+<center>
 <p> Nama : Ivan Wirawan <br>
     Jurusan : Teknik Informatika Institut Teknologi Bandung <br>
     Deskripsi Diri : Seorang manusia yang ingin mencoba berbagai rasa dunia<br>
@@ -14,7 +27,9 @@
     Bakat : Bernafas <br>
     Projek : Tubes Pengkom dan Tubes Daspro<br>
     Kemampuan : Menyelesaikan masalah logika<br>
+</center>
 </p>
+</div>
 </center>
 </body>
 </html>
