--- a/Website.html
+++ b/Website.html
@@ -1,35 +1,119 @@
 <!DOCTYPE html>
 <html>
-<style>
-body {background-color: powderblue;}
-h1 {font-family: verdana;}
-p {
-    font-family: verdana;
-    border : 2px solid dodgerblue;
-    }
-div {
-    text-align: justify;
-}
-</style>
 <head>
 <title>About Me</title>
+<style>
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    font-family: verdana;
+}
+h1 {
+    text-align: center;
+}
+p {
+    overflow: hidden;
+}
+.topnav {
+    width: 100%; 
+    overflow: hidden;
+    background-color: powderblue;
+}
+.topnav a {
+    float: left;
+    color: darkblue;
+    text-align: center;
+    padding: 14px 5.5%;
+    font-size: 16px;
+}
+.topnav a:hover {
+    background-color: darkblue;
+    color: white;
+}
+.topnav a.active {
+    background-color: darkblue;
+    color: white;
+}
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    text-align: center; 
+    margin-top: 80px; 
+}
+img {
+    margin-left: 30px; 
+    margin-right: 30px;
+}
+</style>
 </head>
 <body>
-<center>
-<h1>Fortofolio Diri</h1>
-<img src = "Picture.jpg" alt="Foto Diri" width="200" height="293">
-<div>
-<center>
-<p> Nama : Ivan Wirawan <br>
-    Jurusan : Teknik Informatika Institut Teknologi Bandung <br>
-    Deskripsi Diri : Seorang manusia yang ingin mencoba berbagai rasa dunia<br>
-    Minat : Bersatu dengan alam<br>
-    Bakat : Bernafas <br>
-    Projek : Tubes Pengkom dan Tubes Daspro<br>
-    Kemampuan : Menyelesaikan masalah logika<br>
-</center>
-</p>
+<div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#profile">Profile</a>
+    <a href="#ine">Interest & Talent</a>
+    <a href="#projects">Projects</a>
+    <a href="#achievement">Achievements</a>
+    <a href="#contact">Contact</a>
 </div>
-</center>
+<a id="Home"><h1>IvWFortofolio</h1></a>
+
+<div class="container">
+    <h2>Hi! My Name is Ivan Wirawan</h2>
+    <img src="Picture.png" alt="Foto Diri" width="200" height="293">
+</div>
+<br><br><br><br><br>
+<a id="profile"><h1>My Profile</h1></a>
+<div class="container">
+    <img src="Picture2.jpg" alt="Foto Diri" width="300" height="200">
+    <P>I'm an undergraduate student in School of Electrical and Engineering <br>
+         Institut Teknologi Bandung. Majoring in Information Technology, <br>
+          I aspire to be the best Cyber Analyst in the worlds.
+    </P>
+    
+</div>
+
+<br><br><br><br><br>
+<a id ="ine"><h1>Interest & Talent</h1></a>
+<P>Interest : <br>
+    - Cyber Security <br>
+    - Fullstack Development <br> <br>
+    Talent : <br>
+    - Logical problem solving <br>
+    - Team management <br>
+    - Time management <br>
+</P>
+
+<br><br><br><br><br>
+<a id="projects"><h1>Projects</h1></a>
+<P>Informatics Projects :<br>
+    - Tubes Pengkom <br>
+    - Tubes Project <br> <br>
+    Organizational Projects : <br>
+    - PPAB KMB ITB 2024 <br>
+    - TPB Cup <br>
+    - Makrab VVD <br>
+</P>
+
+<br><br><br><br><br>
+<a id="achievement"><h1>Achievements</h1></a>
+<P>Academic Achievements :<br>
+    - 1st Winner of Industrial Competition by PCU <br>
+    - Favorite Winner of Industrial Competition by PCU <br> <br>
+    Non-Academic Achievements : <br>
+    - 11.18 on 2.4 km <br>
+    - Half Marathon Finisher <br>
+
+<br><br><br><br><br>
+
+<a id="contact"><h1>Contact</h1></a>
+<a href="https://line.me/ti/p/gJfAEhcVxI">Line</a>
+<a href="https://wa.me/+6287765928160">Whatsapp</a>
+<a href="https://www.instagram.com/ivan.wirawan/">Instagram</a>
+<a href="https://www.linkedin.com/in/ivan-wirawan-55b86a293/">LinkedIn</a>
+</P>
 </body>
 </html>
