--- a/Website.html
+++ b/Website.html
@@ -41,8 +41,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center; 
-    text-align: center; 
-    margin-top: 80px; 
+    text-align: center;  
 }
 img {
     margin-left: 30px; 
@@ -63,12 +62,12 @@ img {
 
 <div class="container">
     <h2>Hi! My Name is Ivan Wirawan</h2>
-    <img src="Picture.png" alt="Foto Diri" width="200" height="293">
+    <img src="Picture.png" width="200" height="293">
 </div>
 <br><br><br><br><br>
 <a id="profile"><h1>My Profile</h1></a>
 <div class="container">
-    <img src="Picture2.jpg" alt="Foto Diri" width="300" height="200">
+    <img src="Picture2.jpg" width="300" height="200">
     <P>I'm an undergraduate student in School of Electrical and Engineering <br>
          Institut Teknologi Bandung. Majoring in Information Technology, <br>
           I aspire to be the best Cyber Analyst in the worlds.
@@ -78,18 +77,23 @@ img {
 
 <br><br><br><br><br>
 <a id ="ine"><h1>Interest & Talent</h1></a>
-<P>Interest : <br>
-    - Cyber Security <br>
-    - Fullstack Development <br> <br>
-    Talent : <br>
-    - Logical problem solving <br>
-    - Team management <br>
-    - Time management <br>
-</P>
+<div class="container">
+    <P>Interest : <br>
+        - Cyber Security <br>
+        - Fullstack Development <br> <br>
+        Talent : <br>
+        - Logical problem solving <br>
+        - Team management <br>
+        - Time management <br>
+    </P>
+    <img src="Picture3.jpg" width="300" height="200">
+</div>
 
 <br><br><br><br><br>
 <a id="projects"><h1>Projects</h1></a>
-<P>Informatics Projects :<br>
+<div class="container">
+    <img src="Picture4.png"  width="300" height="200">
+    <P>Informatics Projects :<br>
     - Tubes Pengkom <br>
     - Tubes Project <br> <br>
     Organizational Projects : <br>
@@ -97,6 +101,7 @@ img {
     - TPB Cup <br>
     - Makrab VVD <br>
 </P>
+</div>
 
 <br><br><br><br><br>
 <a id="achievement"><h1>Achievements</h1></a>
@@ -110,10 +115,22 @@ img {
 <br><br><br><br><br>
 
 <a id="contact"><h1>Contact</h1></a>
+<div class="container">
+<img src="line.webp"  width="18" height="18">
 <a href="https://line.me/ti/p/gJfAEhcVxI">Line</a>
+</div>
+<div class="container">
+<img src="wa.jpg"  width="18" height="18">
 <a href="https://wa.me/+6287765928160">Whatsapp</a>
+</div>
+<div class="container">
+<img src="ig.jpeg"  width="20" height="20">
 <a href="https://www.instagram.com/ivan.wirawan/">Instagram</a>
+</div>
+<div class="container">
+<img src="linkedin.png"  width="18" height="18">
 <a href="https://www.linkedin.com/in/ivan-wirawan-55b86a293/">LinkedIn</a>
+</div>
 </P>
 </body>
 </html>
